packages/kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  ports:
    - name: client
      port: 2181
      protocol: TCP
    - name: follower
      port: 2888
      protocol: TCP
    - name: leader
      port: 3888
      protocol: TCP

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zookeeper-deployment-1
spec:
  template:
    spec:
      containers:
        - name: zookeeper1
          image: bitnami/zookeeper
          ports:
            - containerPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka
  template:
    metadata:
      labels:
        component: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: ClusterIP
  selector:
    component: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
